# software-factory-pipeline

./: .env.example  README.md  run_pipeline.sh
step01_requirements/: pyproject.toml
step01_requirements/src/step01_requirements/: crew.py  main.py
step01_requirements/src/step01_requirements/config/: agents.yaml  tasks.yaml
step02_architecture/: .gitignore  pyproject.toml
step02_architecture/src/step02_architecture/: crew.py  main.py
step02_architecture/src/step02_architecture/config/: agents.yaml  tasks.yaml
step03_planning/: pyproject.toml
step03_planning/src/step03_planning/: crew.py  main.py
step03_planning/src/step03_planning/config/: agents.yaml  tasks.yaml
step04_database/: pyproject.toml
step04_database/src/step04_database/: crew.py  main.py
step04_database/src/step04_database/config/: agents.yaml  tasks.yaml
step05_backend/: pyproject.toml
step05_backend/src/step05_backend/: crew.py  main.py
step05_backend/src/step05_backend/config/: agents.yaml  tasks.yaml
step06_frontend/: pyproject.toml
step06_frontend/src/step06_frontend/: crew.py  main.py
step06_frontend/src/step06_frontend/config/: agents.yaml  tasks.yaml
step07_qa/: pyproject.toml
step07_qa/src/step07_qa/: crew.py  main.py
step07_qa/src/step07_qa/config/: agents.yaml  tasks.yaml
step08_evaluation/: pyproject.toml
step08_evaluation/src/step08_evaluation/: crew.py  main.py
step08_evaluation/src/step08_evaluation/config/: agents.yaml  tasks.yaml
step09_git_integration/: pyproject.toml
step09_git_integration/src/step09_git_integration/: crew.py  main.py
step09_git_integration/src/step09_git_integration/config/: agents.yaml  tasks.yaml
step10_deployment/: pyproject.toml
step10_deployment/src/step10_deployment/: crew.py  main.py
step10_deployment/src/step10_deployment/config/: agents.yaml  tasks.yaml
step10_deployment/src/step10_deployment/tools/: deployment_tools.py
