[project]
name = "step01_requirements"
version = "0.1.0"
description = "Step 01 - Requirements Analysis: Generate IEEE 830 SRS from project idea"
authors = [{ name = "NKU Technologies", email = "dev@nkutechologies.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.11.1",
    "python-docx>=1.1.0"
]

[project.scripts]
step01_requirements = "step01_requirements.main:run"
run_crew = "step01_requirements.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
