[project]
name = "step02_architecture"
version = "0.1.0"
description = "Step 02 - Architecture Design: Generate system architecture from SRS"
authors = [{ name = "NKU Technologies", email = "dev@nkutechologies.com" }]
requires-python = ">=3.10,<3.14"
dependencies = ["crewai[tools]==1.11.1"]

[project.scripts]
step02_architecture = "step02_architecture.main:run"
run_crew = "step02_architecture.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
