[project]
name = "step03_planning"
version = "0.1.0"
description = "Step 03 - Task Planning: Break architecture into development tasks"
authors = [{ name = "NKU Technologies", email = "dev@nkutechologies.com" }]
requires-python = ">=3.10,<3.14"
dependencies = ["crewai[tools]==1.11.1"]

[project.scripts]
step03_planning = "step03_planning.main:run"
run_crew = "step03_planning.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
