[project]
name = "step04_database"
version = "0.1.0"
description = "Step 04 - Database Engineering: Generate SQL schemas from architecture"
authors = [{ name = "NKU Technologies", email = "dev@nkutechologies.com" }]
requires-python = ">=3.10,<3.14"
dependencies = ["crewai[tools]==1.11.1"]

[project.scripts]
step04_database = "step04_database.main:run"
run_crew = "step04_database.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
