[project]
name = "step05_backend"
version = "0.1.0"
description = "Step 05 - Backend Development: Generate API code from architecture"
authors = [{ name = "NKU Technologies", email = "dev@nkutechologies.com" }]
requires-python = ">=3.10,<3.14"
dependencies = ["crewai[tools]==1.11.1"]

[project.scripts]
step05_backend = "step05_backend.main:run"
run_crew = "step05_backend.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
