[project]
name = "step06_frontend"
version = "0.1.0"
description = "Step 06 - Frontend Development: Generate React UI components"
authors = [{ name = "NKU Technologies", email = "dev@nkutechologies.com" }]
requires-python = ">=3.10,<3.14"
dependencies = ["crewai[tools]==1.11.1"]

[project.scripts]
step06_frontend = "step06_frontend.main:run"
run_crew = "step06_frontend.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
