[project]
name = "step07_qa"
version = "0.1.0"
description = "Step 07 - QA Engineering: Generate test suites for all code"
authors = [{ name = "NKU Technologies", email = "dev@nkutechologies.com" }]
requires-python = ">=3.10,<3.14"
dependencies = ["crewai[tools]==1.11.1"]

[project.scripts]
step07_qa = "step07_qa.main:run"
run_crew = "step07_qa.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
