[project]
name = "step08_evaluation"
version = "0.1.0"
description = "Step 08 - Code Evaluation: Score code quality, security, and compliance"
authors = [{ name = "NKU Technologies", email = "dev@nkutechologies.com" }]
requires-python = ">=3.10,<3.14"
dependencies = ["crewai[tools]==1.11.1"]

[project.scripts]
step08_evaluation = "step08_evaluation.main:run"
run_crew = "step08_evaluation.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
